--- a/spec/fixtures/vcr_cassettes/Welcome_Page/It_logs_out/log_in/happy_path.yml
+++ b/spec/fixtures/vcr_cassettes/Welcome_Page/It_logs_out/log_in/happy_path.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: http://localhost:3001/api/v1/profiles?user_id=79&zipcode=8111
+    uri: http://localhost:3001/api/v1/profiles?user_id=40&zipcode=8111
     body:
       encoding: UTF-8
       string: ''
@@ -17,21 +17,23 @@ http_interactions:
       - "*/*"
   response:
     status:
-      code: 400
-      message: Bad Request
+      code: 201
+      message: Created
     headers:
       Content-Type:
       - application/json; charset=utf-8
+      Etag:
+      - W/"8f7fc60752a9e15e49c51adc89963144"
       Cache-Control:
-      - no-cache
+      - max-age=0, private, must-revalidate
       X-Request-Id:
-      - c5cbf535-bff4-4b46-b0a3-74344b2ff671
+      - 236de98b-cfbe-4bab-a428-b8087b8183a2
       X-Runtime:
-      - '0.008373'
+      - '0.009131'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
-      string: '{"data":{},"error":"invalid parameters"}'
-  recorded_at: Tue, 20 Apr 2021 20:59:19 GMT
+      string: '{"data":"profile created successfully"}'
+  recorded_at: Wed, 21 Apr 2021 02:06:08 GMT
 recorded_with: VCR 6.0.0
