--- a/spec/fixtures/vcr_cassettes/profile_can_see_another_user.yml
+++ b/spec/fixtures/vcr_cassettes/profile_can_see_another_user.yml
@@ -25,15 +25,50 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 21f95e3e-bb02-4abb-9a0a-de4414ffedc6
+      - ee857691-4c69-48dd-9fe7-bc763a9ee6d2
       X-Runtime:
-      - '1.195310'
+      - '0.689490'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":0}'
-  recorded_at: Tue, 20 Apr 2021 20:59:12 GMT
+  recorded_at: Wed, 21 Apr 2021 02:06:04 GMT
+- request:
+    method: get
+    uri: http://localhost:3001/api/v1/profiles/1/circle
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v1.4.1
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json; charset=utf-8
+      Etag:
+      - W/"2ae2d457bbfde41efef4b8e2c6091566"
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      X-Request-Id:
+      - 182c77f2-18bc-4085-af4e-2e5d28929761
+      X-Runtime:
+      - '0.005673'
+      Transfer-Encoding:
+      - chunked
+    body:
+      encoding: UTF-8
+      string: '{"data":[{"id":"2","type":"profile","attributes":{"zipcode":"80305","user_id":2,"profile_picture":"http://www.google.com","username":"korn"}},{"id":"2","type":"profile","attributes":{"zipcode":"80305","user_id":2,"profile_picture":"http://www.google.com","username":"korn"}},{"id":"2","type":"profile","attributes":{"zipcode":"80305","user_id":2,"profile_picture":"http://www.google.com","username":"korn"}},{"id":"3","type":"profile","attributes":{"zipcode":"80304","user_id":3,"profile_picture":"http://www.google.com","username":"slipknot"}},{"id":"4","type":"profile","attributes":{"zipcode":"80303","user_id":4,"profile_picture":"http://www.google.com","username":"photos
+        by jim"}},{"id":"5","type":"profile","attributes":{"zipcode":"80544","user_id":5,"profile_picture":"http://www.google.com","username":"arteest"}}]}'
+  recorded_at: Wed, 21 Apr 2021 02:06:04 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profile/1/tags
@@ -59,15 +94,15 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - a20fc671-e2f6-4490-9446-0a781aa8d15b
+      - 1367b12d-e224-429c-810b-4225c253b3d0
       X-Runtime:
-      - '0.004469'
+      - '0.005690'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"1","type":"tag","attributes":{"name":"Painter"}},{"id":"3","type":"tag","attributes":{"name":"Sculpter"}}]}'
-  recorded_at: Tue, 20 Apr 2021 20:59:12 GMT
+  recorded_at: Wed, 21 Apr 2021 02:06:04 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/1/post
@@ -89,24 +124,22 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"5e0870b51fcd278d67344607e7464ed1"
+      - W/"a43d15b121e5dbde5a4753318e43051c"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - b666b0b9-35d2-4326-89f4-0f5207b7962b
+      - c974e49a-55b6-42a2-a042-4ae4f5ce854f
       X-Runtime:
-      - '0.004151'
+      - '0.004732'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"1","type":"post","attributes":{"content":"hey did you
-        see that lil nas X video?","link":"photoURL.com","user_id":1,"created_at":"2021-04-19T21:22:47.070Z"}},{"id":"2","type":"post","attributes":{"content":"hey
-        did you see that create meme?","link":"photoURL.com","user_id":1,"created_at":"2021-04-19T21:22:47.072Z"}},{"id":"3","type":"post","attributes":{"content":"hey
-        did you see that riot footage?","link":null,"user_id":1,"created_at":"2021-04-19T21:22:47.073Z"}},{"id":"11","type":"post","attributes":{"content":"this
-        is my first post","link":"www.google.com","user_id":1,"created_at":"2021-04-20T20:59:07.211Z"}},{"id":"12","type":"post","attributes":{"content":"this
-        is my first post","link":"","user_id":1,"created_at":"2021-04-20T20:59:07.731Z"}}]}'
-  recorded_at: Tue, 20 Apr 2021 20:59:12 GMT
+        see that lil nas X video?","link":"photoURL.com","user_id":1,"created_at":"2021-04-20T22:34:23.509Z"}},{"id":"2","type":"post","attributes":{"content":"hey
+        did you see that create meme?","link":"photoURL.com","user_id":1,"created_at":"2021-04-20T22:34:23.512Z"}},{"id":"3","type":"post","attributes":{"content":"hey
+        did you see that riot footage?","link":null,"user_id":1,"created_at":"2021-04-20T22:34:23.515Z"}}]}'
+  recorded_at: Wed, 21 Apr 2021 02:06:04 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/1/galleries
@@ -128,20 +161,20 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"21fb6f684195e6b9d8c2a512971b82e6"
+      - W/"d2cc8686b092016a8c21ca091655d921"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - ff353a91-9b81-40d9-918e-f464367c2c43
+      - f4dae203-3925-4775-bec6-a29fcddd4201
       X-Runtime:
-      - '0.004739'
+      - '0.003944'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"1","type":"gallery","attributes":{"user_id":1,"name":"photos
-        from cali","created_at":"2021-04-19T21:22:47.093Z","updated_at":"2021-04-19T21:22:47.093Z","photo_url":"http://www.google.com"}}]}'
-  recorded_at: Tue, 20 Apr 2021 20:59:12 GMT
+        from cali","created_at":"2021-04-20T22:34:23.554Z","updated_at":"2021-04-20T22:34:23.554Z","photo_url":"http://www.google.com"}}]}'
+  recorded_at: Wed, 21 Apr 2021 02:06:04 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/1/galleries/1/photos
@@ -163,22 +196,22 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"8bbfaaac72f6dc95c455564b6792fa88"
+      - W/"2e5b77e18807a3e02dc185f0a67eb344"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - f19ef0eb-d4c1-4b65-8341-c5e5bda6c59d
+      - 583a07bf-a76a-42fa-afc2-69253d644d9d
       X-Runtime:
-      - '0.005191'
+      - '0.006069'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"1","type":"photo","attributes":{"description":"pic
-        1","url":"http:www.google.com","created_at":"2021-04-19T21:22:47.117Z","updated_at":"2021-04-19T21:22:47.117Z","gallery_id":1}},{"id":"2","type":"photo","attributes":{"description":"pic
-        1","url":"http:www.google.com","created_at":"2021-04-19T21:22:47.120Z","updated_at":"2021-04-19T21:22:47.120Z","gallery_id":1}},{"id":"3","type":"photo","attributes":{"description":"pic
-        1","url":"http:www.google.com","created_at":"2021-04-19T21:22:47.123Z","updated_at":"2021-04-19T21:22:47.123Z","gallery_id":1}}]}'
-  recorded_at: Tue, 20 Apr 2021 20:59:12 GMT
+        1","url":"http:www.google.com","created_at":"2021-04-20T22:34:23.602Z","updated_at":"2021-04-20T22:34:23.602Z","gallery_id":1}},{"id":"2","type":"photo","attributes":{"description":"pic
+        1","url":"http:www.google.com","created_at":"2021-04-20T22:34:23.609Z","updated_at":"2021-04-20T22:34:23.609Z","gallery_id":1}},{"id":"3","type":"photo","attributes":{"description":"pic
+        1","url":"http:www.google.com","created_at":"2021-04-20T22:34:23.615Z","updated_at":"2021-04-20T22:34:23.615Z","gallery_id":1}}]}'
+  recorded_at: Wed, 21 Apr 2021 02:06:04 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/1
@@ -204,16 +237,16 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - d23bc52c-1329-4aee-9ad3-d24ee549626d
+      - a15c8d6b-b372-477c-8590-9aece1467e95
       X-Runtime:
-      - '0.003503'
+      - '0.002831'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":{"id":"1","type":"profile","attributes":{"zipcode":"80301","user_id":1,"profile_picture":"http://www.google.com","username":"the
         painter man"}}}'
-  recorded_at: Tue, 20 Apr 2021 20:59:12 GMT
+  recorded_at: Wed, 21 Apr 2021 02:06:04 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/1
@@ -239,16 +272,16 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - b296c89e-0edf-4587-b86d-fb2275e6523a
+      - 4f852705-caa3-4c74-8971-2c226ad11d99
       X-Runtime:
-      - '0.002456'
+      - '0.002806'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":{"id":"1","type":"profile","attributes":{"zipcode":"80301","user_id":1,"profile_picture":"http://www.google.com","username":"the
         painter man"}}}'
-  recorded_at: Tue, 20 Apr 2021 20:59:12 GMT
+  recorded_at: Wed, 21 Apr 2021 02:06:04 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/distance?current_user=2&user=2
@@ -274,15 +307,51 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - c0740e9f-a34b-47b6-9ac5-3351fb6e8e35
+      - e9056d23-f58a-4001-a32d-909b0bb38c0f
       X-Runtime:
-      - '1.546091'
+      - '0.700774'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":0}'
-  recorded_at: Tue, 20 Apr 2021 20:59:14 GMT
+  recorded_at: Wed, 21 Apr 2021 02:06:05 GMT
+- request:
+    method: get
+    uri: http://localhost:3001/api/v1/profiles/2/circle
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v1.4.1
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json; charset=utf-8
+      Etag:
+      - W/"45794f2a781a31b76413877d58a413b1"
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      X-Request-Id:
+      - e857191b-cabd-44eb-ae84-6d3ed80636bc
+      X-Runtime:
+      - '0.006022'
+      Transfer-Encoding:
+      - chunked
+    body:
+      encoding: UTF-8
+      string: '{"data":[{"id":"1","type":"profile","attributes":{"zipcode":"80301","user_id":1,"profile_picture":"http://www.google.com","username":"the
+        painter man"}},{"id":"3","type":"profile","attributes":{"zipcode":"80304","user_id":3,"profile_picture":"http://www.google.com","username":"slipknot"}},{"id":"4","type":"profile","attributes":{"zipcode":"80303","user_id":4,"profile_picture":"http://www.google.com","username":"photos
+        by jim"}},{"id":"5","type":"profile","attributes":{"zipcode":"80544","user_id":5,"profile_picture":"http://www.google.com","username":"arteest"}}]}'
+  recorded_at: Wed, 21 Apr 2021 02:06:05 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profile/2/tags
@@ -308,15 +377,15 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - ae1227b2-4509-420e-9b05-2a565e5e8327
+      - bf694a61-5755-4a8f-9489-d456fbcd9b74
       X-Runtime:
-      - '0.005451'
+      - '0.005252'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"4","type":"tag","attributes":{"name":"Photographer"}},{"id":"5","type":"tag","attributes":{"name":"Drummer"}}]}'
-  recorded_at: Tue, 20 Apr 2021 20:59:14 GMT
+  recorded_at: Wed, 21 Apr 2021 02:06:05 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/2/post
@@ -338,21 +407,21 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"f4d4d76a73f342f3036d030c7819a364"
+      - W/"8e3d316eb30fd7ca978474995a33d9e6"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - a15e9c50-800b-4325-8ceb-52e4f4fc4c43
+      - 3a84b344-ec80-4422-8986-41c105304704
       X-Runtime:
-      - '0.003495'
+      - '0.004079'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"4","type":"post","attributes":{"content":"hey did you
-        see that headline?","link":"photoURL.com","user_id":2,"created_at":"2021-04-19T21:22:47.075Z"}},{"id":"5","type":"post","attributes":{"content":"hey
-        checkout my create shoes?","link":"photoURL.com","user_id":2,"created_at":"2021-04-19T21:22:47.077Z"}}]}'
-  recorded_at: Tue, 20 Apr 2021 20:59:14 GMT
+        see that headline?","link":"photoURL.com","user_id":2,"created_at":"2021-04-20T22:34:23.517Z"}},{"id":"5","type":"post","attributes":{"content":"hey
+        checkout my create shoes?","link":"photoURL.com","user_id":2,"created_at":"2021-04-20T22:34:23.521Z"}}]}'
+  recorded_at: Wed, 21 Apr 2021 02:06:05 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/2/galleries
@@ -374,21 +443,21 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"87e73f07deabb8a310b82e9292bb70dd"
+      - W/"b258e4e7266e21ef405b3912aeedee2e"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 0af86cfa-8d8b-4b73-9323-307bfa11d2c2
+      - 7829f8bb-7204-41bd-8a41-bcb0deefb2c7
       X-Runtime:
-      - '0.003986'
+      - '0.005246'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"2","type":"gallery","attributes":{"user_id":2,"name":"sweet
-        tatoos","created_at":"2021-04-19T21:22:47.096Z","updated_at":"2021-04-19T21:22:47.096Z","photo_url":"http://www.google.com"}},{"id":"6","type":"gallery","attributes":{"user_id":2,"name":"set
-        from the theatre","created_at":"2021-04-19T21:22:47.102Z","updated_at":"2021-04-19T21:22:47.102Z","photo_url":"http://www.google.com"}}]}'
-  recorded_at: Tue, 20 Apr 2021 20:59:14 GMT
+        tatoos","created_at":"2021-04-20T22:34:23.558Z","updated_at":"2021-04-20T22:34:23.558Z","photo_url":"http://www.google.com"}},{"id":"6","type":"gallery","attributes":{"user_id":2,"name":"set
+        from the theatre","created_at":"2021-04-20T22:34:23.575Z","updated_at":"2021-04-20T22:34:23.575Z","photo_url":"http://www.google.com"}}]}'
+  recorded_at: Wed, 21 Apr 2021 02:06:05 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/2/galleries/2/photos
@@ -410,21 +479,21 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"22886b12f79bd9bb78f1ddd027896a5a"
+      - W/"e84948679733d2982d48bb47b105d533"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - eb717328-7b59-406f-813e-3525d17bd494
+      - dd6af215-741d-4e4e-bb7f-5f9bb479b470
       X-Runtime:
-      - '0.005310'
+      - '0.005779'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"4","type":"photo","attributes":{"description":"pic
-        1","url":"http:www.google.com","created_at":"2021-04-19T21:22:47.127Z","updated_at":"2021-04-19T21:22:47.127Z","gallery_id":2}},{"id":"5","type":"photo","attributes":{"description":"pic
-        1","url":"http:www.google.com","created_at":"2021-04-19T21:22:47.130Z","updated_at":"2021-04-19T21:22:47.130Z","gallery_id":2}}]}'
-  recorded_at: Tue, 20 Apr 2021 20:59:14 GMT
+        1","url":"http:www.google.com","created_at":"2021-04-20T22:34:23.623Z","updated_at":"2021-04-20T22:34:23.623Z","gallery_id":2}},{"id":"5","type":"photo","attributes":{"description":"pic
+        1","url":"http:www.google.com","created_at":"2021-04-20T22:34:23.629Z","updated_at":"2021-04-20T22:34:23.629Z","gallery_id":2}}]}'
+  recorded_at: Wed, 21 Apr 2021 02:06:05 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/2/galleries/6/photos
@@ -446,22 +515,22 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"5ffe3fd39ce664c424295d8a03888104"
+      - W/"4bd01f79667ed6f20005575dbc2c10d4"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 1de62726-5b73-4d4a-b6fb-47a3e90698e5
+      - '02709448-82e4-4715-aa88-9d3b88aaff4b'
       X-Runtime:
-      - '0.005183'
+      - '0.006275'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"13","type":"photo","attributes":{"description":"pic
-        1","url":"http:www.google.com","created_at":"2021-04-19T21:22:47.149Z","updated_at":"2021-04-19T21:22:47.149Z","gallery_id":6}},{"id":"14","type":"photo","attributes":{"description":"pic
-        1","url":"http:www.google.com","created_at":"2021-04-19T21:22:47.151Z","updated_at":"2021-04-19T21:22:47.151Z","gallery_id":6}},{"id":"15","type":"photo","attributes":{"description":"pic
-        1","url":"http:www.google.com","created_at":"2021-04-19T21:22:47.153Z","updated_at":"2021-04-19T21:22:47.153Z","gallery_id":6}}]}'
-  recorded_at: Tue, 20 Apr 2021 20:59:14 GMT
+        1","url":"http:www.google.com","created_at":"2021-04-20T22:34:23.673Z","updated_at":"2021-04-20T22:34:23.673Z","gallery_id":6}},{"id":"14","type":"photo","attributes":{"description":"pic
+        1","url":"http:www.google.com","created_at":"2021-04-20T22:34:23.692Z","updated_at":"2021-04-20T22:34:23.692Z","gallery_id":6}},{"id":"15","type":"photo","attributes":{"description":"pic
+        1","url":"http:www.google.com","created_at":"2021-04-20T22:34:23.696Z","updated_at":"2021-04-20T22:34:23.696Z","gallery_id":6}}]}'
+  recorded_at: Wed, 21 Apr 2021 02:06:05 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/2
@@ -487,15 +556,15 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 7bf4501d-058c-4290-a28b-9e0d7a37d725
+      - 9f2e9535-3361-437b-a03a-49bd4089c627
       X-Runtime:
-      - '0.002769'
+      - '0.003444'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":{"id":"2","type":"profile","attributes":{"zipcode":"80305","user_id":2,"profile_picture":"http://www.google.com","username":"korn"}}}'
-  recorded_at: Tue, 20 Apr 2021 20:59:14 GMT
+  recorded_at: Wed, 21 Apr 2021 02:06:05 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/2
@@ -521,13 +590,13 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 63f94615-82b7-4d91-8b38-7884b1d6fb69
+      - 3f78e930-824d-4726-b703-3d6626f67f4c
       X-Runtime:
-      - '0.003281'
+      - '0.004294'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":{"id":"2","type":"profile","attributes":{"zipcode":"80305","user_id":2,"profile_picture":"http://www.google.com","username":"korn"}}}'
-  recorded_at: Tue, 20 Apr 2021 20:59:14 GMT
+  recorded_at: Wed, 21 Apr 2021 02:06:05 GMT
 recorded_with: VCR 6.0.0
